--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,13 +18,12 @@ jobs:
       - run: "npm install"
       - run: "npm run build"
   lint:
-    runs-on: ubuntu latest
-    steps: 
-    - uses: actions/checkout@v3
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
       - name: "Sätter upp Node v16 i vårt workflow"
         uses: actions/setup-node@v3
         with:
           node-version: 16
       - run: "npm install"
       - run: "npx eslint src/*.jsx"
-
